--- a/charts/capi-hcloud-talos/templates/worker-pools/talos-config-template.yaml
+++ b/charts/capi-hcloud-talos/templates/worker-pools/talos-config-template.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   template:
     spec:
-      configPatches: {{ toYaml .talosConfigPatches }}
+      configPatches: {{ toYaml .talosConfigPatches | nindent 6 }}
       generateType: worker
       talosVersion: {{ .versions.talos }}
 {{- end }}
