--- a/charts/capi-hcloud-talos/templates/cluster/hetzner-cluster.yaml
+++ b/charts/capi-hcloud-talos/templates/cluster/hetzner-cluster.yaml
@@ -25,7 +25,7 @@ spec:
   hetznerSecretRef:
     key:
       hcloudToken: token
-    name: hcloud
+    name: {{ .Release.Namespace }}/hcloud
   sshKeys:
     hcloud:
     - name: {{ .Values.cluster.sshKey }}
