--- a/charts/capi-hcloud-talos/templates/control-plane/hcloud-machine-template.yaml
+++ b/charts/capi-hcloud-talos/templates/control-plane/hcloud-machine-template.yaml
@@ -9,3 +9,6 @@ spec:
       imageName: {{ .Values.controlPlane.hcloud.imageName }}
       placementGroupName: control-plane
       type: {{ .Values.controlPlane.hcloud.machineType }}
+      publicNetwork:
+        enableIPv4: false
+        enableIPv6: false
