hetznerCluster secret is already namespaced

--- a/charts/capi-hcloud-talos/templates/cluster/hetzner-cluster.yaml
+++ b/charts/capi-hcloud-talos/templates/cluster/hetzner-cluster.yaml
@@ -27,7 +27,7 @@ spec:
   hetznerSecretRef:
     key:
       hcloudToken: token
-    name: {{ .Release.Namespace }}/hcloud
+    name: hcloud
   sshKeys:
     hcloud:
     - name: {{ .Values.cluster.sshKey }}
