--- a/charts/capi-hcloud-talos/templates/worker-pools/machine-template.yaml
+++ b/charts/capi-hcloud-talos/templates/worker-pools/machine-template.yaml
@@ -11,6 +11,6 @@ spec:
       placementGroupName: {{ .name }}
       type: {{ .hcloud.machineType }}
       publicNetwork:
-        enableIPv4: {{ .publicNetwork.enableIPv4 }}
-        enableIPv6: {{ .publicNetwork.enableIPv6 }}
+        enableIPv4: {{ .publicNetwork.enableIPv4 | default true }}
+        enableIPv6: {{ .publicNetwork.enableIPv6 | default true }}
 {{- end }}
